--- a/styles.css
+++ b/styles.css
@@ -77,16 +77,44 @@ input {
     padding: 15px;
     border-radius: 50px;
     border: 1px solid var(--desaturated-red);
+    font-size: 16px;
 }
 
 button {
     position: absolute;
     border-radius: 50px;
-    padding: 11px;
-    width: 100px;
-    transform: translateX(-100px);
+    padding: 13px;
+    width: 80px;
+    transform: translateX(-80px);
     border: 1px solid var(--desaturated-red);
     background: linear-gradient(135deg,hsl(0, 0%, 100%), hsl(0, 93%, 68%));
+}
+
+form div {
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.error {
+    display: none;
+    position: absolute;
+    top:10px;
+    right: 85px;
+}
+
+.warning {
+    color:red;
+    padding-left: 15px;
+    display: none;
+}
+
+input:focus {
+    outline: 0;
+}
+
+button:hover, button:focus {
+    outline: 0;
+    background: linear-gradient(135deg,hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 }
 
 @media screen and (max-width: 775px) {
