--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 70px;
     text-transform: uppercase;
     letter-spacing: 15px;
     display: inline-grid;
@@ -63,6 +63,7 @@ p {
     font-weight: 400;
     line-height: 1.5;
     margin: 25px 0 40px;
+    font-size: 17px;
 }
 
 .poster {
@@ -115,6 +116,11 @@ input:focus {
 button:hover, button:focus {
     outline: 0;
     background: linear-gradient(135deg,hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+}
+
+
+::placeholder {
+    font-size: 12px;
 }
 
 @media screen and (max-width: 775px) {
